added roi map and dists

--- a/analyses/create_figs.ipynb
+++ b/analyses/create_figs.ipynb
@@ -59,6 +59,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load data summary\n",
+    "analysis_type = 'selectivity'\n",
+    "data_summary = pd.read_csv(f'{results_dir}/{analysis_type}/{analysis_type}_summary{suf}.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word 6.177456729107944 20 4.916417865230383e-06 1.3433854094708415\n",
+      "face -4.453222484268767 20 0.00024397064645004447 -0.7424827915443565\n",
+      "tool 3.18548159948312 23 0.00411903394604695 0.4146833357011268\n",
+      "space -5.826643523364782 23 6.155771996654816e-06 -0.4511477450063069\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Calculate t-test between hemis for controls\n",
+    "'''\n",
+    "conds = ['word', 'face','tool','space']\n",
+    "rois = ['ventral_visual_cortex','ventral_visual_cortex','dorsal_visual_cortex','dorsal_visual_cortex']\n",
+    "analysis_type = 'selectivity'\n",
+    "\n",
+    "#load data summary\n",
+    "data_summary = pd.read_csv(f'{results_dir}/{analysis_type}/{analysis_type}_summary{suf}.csv')\n",
+    "\n",
+    "#extract controls\n",
+    "data_summary = data_summary[data_summary['group']=='control']\n",
+    "\n",
+    "#loop through conds\n",
+    "for cond, roi in zip(conds, rois):\n",
+    "    #exract data for cond and roi\n",
+    "    curr_data = data_summary[(data_summary['cond']==cond) & (data_summary['roi']==roi)]\n",
+    "\n",
+    "    #convert data to wide by subject\n",
+    "    curr_data = curr_data.pivot(index='sub', columns='hemi', values='sum_selec_norm')\n",
+    "    \n",
+    "    #run paired t-test between hemis\n",
+    "    t, p = stats.ttest_rel(curr_data['left'], curr_data['right'])\n",
+    "\n",
+    "    #calculate effect size\n",
+    "    d = (curr_data['left'].mean() - curr_data['right'].mean()) / (np.sqrt((curr_data['left'].std() ** 2 + curr_data['right'].std() ** 2) / 2))\n",
+    "\n",
+    "\n",
+    "    print(cond, t, curr_data.shape[0]-1, p, d)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_relResult(statistic=6.177456729107944, pvalue=4.916417865230383e-06)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
