--- a/analyses/create_tables.ipynb
+++ b/analyses/create_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,38 +236,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['all', 'word']"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word_posterior [ 9.19724898 12.96169208]\n",
+      "word_anterior [24.78297922 31.92726273]\n",
+      "face_posterior [20.61605265 27.51900677]\n",
+      "face_anterior [16.07414764 23.78252695]\n",
+      "tool_posterior [25.235288   31.51383168]\n",
+      "tool_anterior [21.57503928 30.43563655]\n",
+      "space_posterior [17.83729789 26.62971709]\n",
+      "space_anterior [23.6509172  33.38028469]\n",
+      "word_posterior [ 9.19724898 12.96169208]\n",
+      "word_anterior [24.78297922 31.92726273]\n",
+      "face_posterior [20.61605265 27.51900677]\n",
+      "face_anterior [16.07414764 23.78252695]\n",
+      "tool_posterior [25.235288   31.51383168]\n",
+      "tool_anterior [21.57503928 30.43563655]\n",
+      "space_posterior [17.83729789 26.62971709]\n",
+      "space_anterior [23.6509172  33.38028469]\n",
+      "word_posterior [ 9.19724898 12.96169208]\n",
+      "word_anterior [24.78297922 31.92726273]\n",
+      "face_posterior [20.61605265 27.51900677]\n",
+      "face_anterior [16.07414764 23.78252695]\n",
+      "tool_posterior [25.235288   31.51383168]\n",
+      "tool_anterior [21.57503928 30.43563655]\n",
+      "space_posterior [17.83729789 26.62971709]\n",
+      "space_anterior [23.6509172  33.38028469]\n",
+      "word_posterior [ 9.19724898 12.96169208]\n",
+      "word_anterior [24.78297922 31.92726273]\n",
+      "face_posterior [20.61605265 27.51900677]\n",
+      "face_anterior [16.07414764 23.78252695]\n",
+      "tool_posterior [25.235288   31.51383168]\n",
+      "tool_anterior [21.57503928 30.43563655]\n",
+      "space_posterior [17.83729789 26.62971709]\n",
+      "space_anterior [23.6509172  33.38028469]\n",
+      "word_posterior [ 9.19724898 12.96169208]\n",
+      "word_anterior [24.78297922 31.92726273]\n",
+      "face_posterior [20.61605265 27.51900677]\n",
+      "face_anterior [16.07414764 23.78252695]\n",
+      "tool_posterior [25.235288   31.51383168]\n",
+      "tool_anterior [21.57503928 30.43563655]\n",
+      "space_posterior [17.83729789 26.62971709]\n",
+      "space_anterior [23.6509172  33.38028469]\n",
+      "word_posterior [ 9.19724898 12.96169208]\n",
+      "word_anterior [24.78297922 31.92726273]\n",
+      "face_posterior [20.61605265 27.51900677]\n",
+      "face_anterior [16.07414764 23.78252695]\n",
+      "tool_posterior [25.235288   31.51383168]\n",
+      "tool_anterior [21.57503928 30.43563655]\n",
+      "space_posterior [17.83729789 26.62971709]\n",
+      "space_anterior [23.6509172  33.38028469]\n",
+      "word_posterior [ 9.19724898 12.96169208]\n",
+      "word_anterior [24.78297922 31.92726273]\n",
+      "face_posterior [20.61605265 27.51900677]\n",
+      "face_anterior [16.07414764 23.78252695]\n",
+      "tool_posterior [25.235288   31.51383168]\n",
+      "tool_anterior [21.57503928 30.43563655]\n",
+      "space_posterior [17.83729789 26.62971709]\n",
+      "space_anterior [23.6509172  33.38028469]\n",
+      "word_posterior [ 9.19724898 12.96169208]\n",
+      "word_anterior [24.78297922 31.92726273]\n",
+      "face_posterior [20.61605265 27.51900677]\n",
+      "face_anterior [16.07414764 23.78252695]\n",
+      "tool_posterior [25.235288   31.51383168]\n",
+      "tool_anterior [21.57503928 30.43563655]\n",
+      "space_posterior [17.83729789 26.62971709]\n",
+      "space_anterior [23.6509172  33.38028469]\n"
+     ]
     }
    ],
    "source": [
-    "test = 'all_word'\n",
-    "\n",
-    "test.split('_')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sum_type = 'neural_map'\n",
     "\n",
-    "conds = ['word_all', 'face_posterior', 'face_anterior', 'tool_all', 'space_posterior', 'space_anterior']\n",
+    "conds = ['word_posterior', 'word_anterior', 'face_posterior', 'face_anterior', 'tool_posterior', 'tool_anterior', 'space_posterior', 'space_anterior']\n",
     "val = 'dist'\n",
     "'''Create a table tracking distance'''\n",
-    "patient_summary = pd.DataFrame(columns = ['sub_code', 'hemi', 'word_all', 'face_posterior', 'face_anterior', 'tool_all', 'space_posterior', 'space_anterior'])\n",
+    "patient_summary = pd.DataFrame(columns = ['sub_code', 'hemi'] + conds)\n",
+    "dist_summary = pd.DataFrame(columns = ['sub_code', 'hemi'] + conds)\n",
     "for code, hemi in zip(sub_info['code'], sub_info['intact_hemi']):\n",
     "\n",
     "    act_resamples = pd.read_csv(f'{results_dir}/{sum_type}/resample_data.csv')\n",
@@ -283,6 +333,7 @@
     "        data_summary.loc[data_summary['sub'] == sub, 'sub_code'] = sub_code\n",
     "\n",
     "    current_vals = []\n",
+    "    current_dists = []\n",
     "    #loop through condition for each patient    \n",
     "    for cond in conds:\n",
     "        patient_cond = cond.split('_')\n",
@@ -293,29 +344,40 @@
     "\n",
     "        #calcualte 95% CI for control data\n",
     "        control_ci = np.percentile(control_data, [(alpha/2)*100, 100-((alpha/2)*100)])\n",
+    "        print(cond, control_ci *3)\n",
     "\n",
     "        #check if patient has data for this condition\n",
     "        if len(patient_data) > 0:\n",
-    "\n",
+    "            \n",
     "            #if patient data is outside of control CI, add to table\n",
     "            if patient_data[val].values[0] > control_ci[1]:\n",
     "                current_vals.append('*')\n",
     "            else:\n",
     "                current_vals.append('-')\n",
+    "\n",
+    "            current_dists.append(patient_data[val].values[0] *3)\n",
+    "            \n",
     "        else:\n",
     "            current_vals.append('n/a')\n",
+    "            current_dists.append('n/a')\n",
     "\n",
     "\n",
     "\n",
     "    patient_vals = [code, hemi] + current_vals\n",
+    "    patient_dists = [code, hemi] + current_dists\n",
     "    #add to dataframe\n",
     "    patient_summary.loc[len(patient_summary)] = patient_vals\n",
+    "    dist_summary.loc[len(dist_summary)] = patient_dists\n",
+    "\n",
+    "    #save\n",
+    "    patient_summary.to_csv(f'{results_dir}/tables/{sum_type}_summary.csv', index = False)\n",
+    "    dist_summary.to_csv(f'{results_dir}/tables/{sum_type}_dists.csv', index = False)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -341,10 +403,12 @@
        "      <th></th>\n",
        "      <th>sub_code</th>\n",
        "      <th>hemi</th>\n",
-       "      <th>word_all</th>\n",
+       "      <th>word_posterior</th>\n",
+       "      <th>word_anterior</th>\n",
        "      <th>face_posterior</th>\n",
        "      <th>face_anterior</th>\n",
-       "      <th>tool_all</th>\n",
+       "      <th>tool_posterior</th>\n",
+       "      <th>tool_anterior</th>\n",
        "      <th>space_posterior</th>\n",
        "      <th>space_anterior</th>\n",
        "    </tr>\n",
@@ -354,23 +418,27 @@
        "      <th>0</th>\n",
        "      <td>XC</td>\n",
        "      <td>left</td>\n",
-       "      <td>-</td>\n",
+       "      <td>12.172045</td>\n",
        "      <td>n/a</td>\n",
        "      <td>n/a</td>\n",
-       "      <td>-</td>\n",
-       "      <td>*</td>\n",
-       "      <td>-</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>25.474921</td>\n",
+       "      <td>17.748183</td>\n",
+       "      <td>32.860695</td>\n",
+       "      <td>20.547361</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>SI</td>\n",
        "      <td>left</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>*</td>\n",
-       "      <td>-</td>\n",
+       "      <td>15.657781</td>\n",
+       "      <td>31.974549</td>\n",
+       "      <td>17.452442</td>\n",
+       "      <td>27.453202</td>\n",
+       "      <td>20.318261</td>\n",
+       "      <td>29.343997</td>\n",
        "      <td>n/a</td>\n",
-       "      <td>*</td>\n",
+       "      <td>37.020354</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -378,63 +446,75 @@
        "      <td>left</td>\n",
        "      <td>n/a</td>\n",
        "      <td>n/a</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>24.278029</td>\n",
+       "      <td>26.048599</td>\n",
+       "      <td>22.384527</td>\n",
+       "      <td>18.758013</td>\n",
+       "      <td>29.118949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>BN</td>\n",
        "      <td>left</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
+       "      <td>10.122213</td>\n",
+       "      <td>22.635514</td>\n",
+       "      <td>19.094006</td>\n",
+       "      <td>20.584837</td>\n",
        "      <td>n/a</td>\n",
-       "      <td>-</td>\n",
-       "      <td>*</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>14.812578</td>\n",
+       "      <td>37.595698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>EB</td>\n",
        "      <td>right</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>*</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
+       "      <td>14.055468</td>\n",
+       "      <td>29.015708</td>\n",
+       "      <td>19.679932</td>\n",
+       "      <td>27.773337</td>\n",
+       "      <td>33.456309</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>19.521347</td>\n",
+       "      <td>25.052238</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>KT</td>\n",
        "      <td>right</td>\n",
-       "      <td>*</td>\n",
+       "      <td>25.977186</td>\n",
+       "      <td>43.801645</td>\n",
        "      <td>n/a</td>\n",
-       "      <td>*</td>\n",
+       "      <td>29.732266</td>\n",
        "      <td>n/a</td>\n",
-       "      <td>*</td>\n",
-       "      <td>*</td>\n",
+       "      <td>n/a</td>\n",
+       "      <td>28.682789</td>\n",
+       "      <td>35.712116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>FO</td>\n",
        "      <td>right</td>\n",
-       "      <td>-</td>\n",
-       "      <td>*</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
+       "      <td>13.700837</td>\n",
+       "      <td>20.284872</td>\n",
+       "      <td>30.487239</td>\n",
+       "      <td>17.281168</td>\n",
+       "      <td>20.668753</td>\n",
+       "      <td>38.614302</td>\n",
+       "      <td>17.506964</td>\n",
+       "      <td>20.033475</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>KN</td>\n",
        "      <td>right</td>\n",
-       "      <td>*</td>\n",
-       "      <td>-</td>\n",
-       "      <td>*</td>\n",
-       "      <td>-</td>\n",
+       "      <td>18.815426</td>\n",
+       "      <td>20.791166</td>\n",
+       "      <td>23.304386</td>\n",
+       "      <td>31.935276</td>\n",
+       "      <td>23.629142</td>\n",
+       "      <td>21.062641</td>\n",
        "      <td>n/a</td>\n",
        "      <td>n/a</td>\n",
        "    </tr>\n",
@@ -443,34 +523,34 @@
        "</div>"
       ],
       "text/plain": [
-       "  sub_code   hemi word_all face_posterior face_anterior tool_all  \\\n",
-       "0       XC   left        -            n/a           n/a        -   \n",
-       "1       SI   left        -              -             *        -   \n",
-       "2       BI   left      n/a            n/a             *        *   \n",
-       "3       BN   left        -              -             -      n/a   \n",
-       "4       EB  right        -              -             *        -   \n",
-       "5       KT  right        *            n/a             *      n/a   \n",
-       "6       FO  right        -              *             -        -   \n",
-       "7       KN  right        *              -             *        -   \n",
+       "  sub_code   hemi word_posterior word_anterior face_posterior face_anterior  \\\n",
+       "0       XC   left      12.172045           n/a            n/a           n/a   \n",
+       "1       SI   left      15.657781     31.974549      17.452442     27.453202   \n",
+       "2       BI   left            n/a           n/a            n/a     24.278029   \n",
+       "3       BN   left      10.122213     22.635514      19.094006     20.584837   \n",
+       "4       EB  right      14.055468     29.015708      19.679932     27.773337   \n",
+       "5       KT  right      25.977186     43.801645            n/a     29.732266   \n",
+       "6       FO  right      13.700837     20.284872      30.487239     17.281168   \n",
+       "7       KN  right      18.815426     20.791166      23.304386     31.935276   \n",
        "\n",
-       "  space_posterior space_anterior  \n",
-       "0               *              -  \n",
-       "1             n/a              *  \n",
-       "2               -              -  \n",
-       "3               -              *  \n",
-       "4               -              -  \n",
-       "5               *              *  \n",
-       "6               -              -  \n",
-       "7             n/a            n/a  "
+       "  tool_posterior tool_anterior space_posterior space_anterior  \n",
+       "0      25.474921     17.748183       32.860695      20.547361  \n",
+       "1      20.318261     29.343997             n/a      37.020354  \n",
+       "2      26.048599     22.384527       18.758013      29.118949  \n",
+       "3            n/a           n/a       14.812578      37.595698  \n",
+       "4      33.456309           n/a       19.521347      25.052238  \n",
+       "5            n/a           n/a       28.682789      35.712116  \n",
+       "6      20.668753     38.614302       17.506964      20.033475  \n",
+       "7      23.629142     21.062641             n/a            n/a  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "patient_summary"
+    "dist_summary"
    ]
   },
   {
