added final behavioral data

--- a/analyses/create_tables.ipynb
+++ b/analyses/create_tables.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,6 +91,7 @@
     "summary_val = ['sum_selec_norm', 'mean_act', 'volume', 'acc']\n",
     "summary_type = ['selectivity','selectivity','selectivity','decoding']\n",
     "summary_name = ['Summed Selectivity', 'Activation', 'Volume', 'Decoding']\n",
+    "cols = ['word_left', 'word_right','','face_left', 'face_right','', 'tool_left', 'tool_right','', 'space_left', 'space_right','']\n",
     "\n",
     "\n",
     "for val, sum_type, sum_name in zip(summary_val, summary_type,summary_name):\n",
@@ -99,8 +100,8 @@
     "        conds = all_conds[table_name[0]]\n",
     "        rois = all_rois[table_name[0]]\n",
     "\n",
-    "        patient_summary = pd.DataFrame(columns = ['sub_code', 'hemi', 'analysis','word_left', 'word_right','face_left', 'face_right', 'tool_left', 'tool_right', 'space_left', 'space_right'])\n",
-    "        patient_percentiles = pd.DataFrame(columns = ['sub_code', 'hemi', 'analysis','word_left', 'word_right','face_left', 'face_right', 'tool_left', 'tool_right', 'space_left', 'space_right'])\n",
+    "        patient_summary = pd.DataFrame(columns = ['sub_code', 'hemi', 'analysis'] + cols)\n",
+    "        patient_percentiles = pd.DataFrame(columns = ['sub_code', 'hemi', 'analysis'] + cols)\n",
     "        for code, hemi in zip(sub_info['code'], sub_info['intact_hemi']):\n",
     "        \n",
     "\n",
@@ -148,11 +149,11 @@
     "                            right_val = current_val\n",
     "                            right_perc = patient_perc\n",
     "                        \n",
-    "                    patient_vals = patient_vals + [left_val, right_val]\n",
-    "                    patient_percs = patient_percs + [left_perc, right_perc]\n",
+    "                    patient_vals = patient_vals + [left_val, right_val, ''] # the blank is there to add a break between conditions\n",
+    "                    patient_percs = patient_percs + [left_perc, right_perc, '']\n",
     "                else:\n",
-    "                    patient_vals = patient_vals + ['n/a', 'n/a']\n",
-    "                    patient_percs = patient_percs + ['n/a', 'n/a']\n",
+    "                    patient_vals = patient_vals + ['n/a', 'n/a', '']\n",
+    "                    patient_percs = patient_percs + ['n/a', 'n/a', '']\n",
     "\n",
     "            #add to dataframe\n",
     "            patient_vals = [code, hemi, sum_name] + patient_vals\n",
