added confound data

--- a/analyses/create_tables.ipynb
+++ b/analyses/create_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +61,332 @@
     "\n",
     "alpha = .05\n",
     "#mni = load_mni152_brain_mask()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create table for confounds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_types = ['tsnr','rot','trans']\n",
+    "data_names = ['tSNR', 'Rotation', 'Translation']\n",
+    "sum_type = 'confound'\n",
+    "\n",
+    "    #print(val, sum_type, sum_name)\n",
+    "act_resamples = pd.read_csv(f'{results_dir}/{sum_type}/{sum_type}_resamples{suf}.csv')\n",
+    "\n",
+    "data_summary = pd.read_csv(f'{results_dir}/{sum_type}/{sum_type}_summary{suf}.csv')\n",
+    "patient_summary = pd.DataFrame(columns = ['sub_code', 'hemi', ] + data_names)\n",
+    "patient_percentiles = pd.DataFrame(columns = ['sub_code', 'hemi',] + data_names)\n",
+    "#extract patients only\n",
+    "data_summary = data_summary[data_summary['group'] == 'patient']\n",
+    "\n",
+    "# for each sub in data_summary, get the sub's code from sub_info\n",
+    "for sub in data_summary['sub'].unique():\n",
+    "    sub_code = sub_info[sub_info['sub'] == sub]['code'].values[0]\n",
+    "    data_summary.loc[data_summary['sub'] == sub, 'sub_code'] = sub_code\n",
+    "\n",
+    "\n",
+    "for code, hemi in zip(sub_info['code'], sub_info['intact_hemi']):\n",
+    "\n",
+    "    patient_vals = []\n",
+    "    patient_percs = []\n",
+    "\n",
+    "    patient_data = data_summary[(data_summary['sub_code'] == code)]\n",
+    "    #loop through condition for each patient    \n",
+    "    for data_type, data_name in zip(data_types, data_names):\n",
+    "\n",
+    "        control_data = act_resamples[data_type]\n",
+    "\n",
+    "        #calcualte 95% CI for control data\n",
+    "        control_ci = np.percentile(control_data, [(alpha/2)*100, 100-((alpha/2)*100)])\n",
+    "            #calcualte patients percentile relative to controls\n",
+    "        patient_perc = stats.percentileofscore(control_data, patient_data[data_type].values[0])\n",
+    "        \n",
+    "\n",
+    "        #if patient data is outside of control CI, add to table\n",
+    "        #only do if below control distribution\n",
+    "        if data_type == 'rot' or data_type == 'trans':\n",
+    "            if patient_data[data_type].values[0] > control_ci[1]:\n",
+    "                current_val = '*'\n",
+    "            else:\n",
+    "                current_val  = '-'\n",
+    "        elif data_type == 'tsnr':\n",
+    "            if patient_data[data_type].values[0] < control_ci[0]:\n",
+    "                current_val = '*'\n",
+    "            else:\n",
+    "                current_val  = '-'\n",
+    "\n",
+    "        patient_vals.append(current_val)\n",
+    "        patient_percs.append(patient_perc)\n",
+    "\n",
+    "    #add to dataframe\n",
+    "    patient_vals = [code, hemi] + patient_vals\n",
+    "    patient_percs = [code, hemi] + patient_percs\n",
+    "\n",
+    "    \n",
+    "    patient_summary.loc[len(patient_summary)] = patient_vals\n",
+    "    patient_percentiles.loc[len(patient_percentiles)] = patient_percs\n",
+    "\n",
+    "#capitalize hemi\n",
+    "patient_summary['hemi'] = patient_summary['hemi'].str.capitalize()\n",
+    "        \n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sub_code</th>\n",
+       "      <th>hemi</th>\n",
+       "      <th>tSNR</th>\n",
+       "      <th>Rotation</th>\n",
+       "      <th>Translation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XC</td>\n",
+       "      <td>Left</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SI</td>\n",
+       "      <td>Left</td>\n",
+       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BI</td>\n",
+       "      <td>Left</td>\n",
+       "      <td>-</td>\n",
+       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BN</td>\n",
+       "      <td>Left</td>\n",
+       "      <td>*</td>\n",
+       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>EB</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>KT</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>FO</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>*</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>KN</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>*</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sub_code   hemi tSNR Rotation Translation\n",
+       "0       XC   Left    -        -           -\n",
+       "1       SI   Left    *        -           -\n",
+       "2       BI   Left    -        *           -\n",
+       "3       BN   Left    *        *           -\n",
+       "4       EB  Right    -        -           -\n",
+       "5       KT  Right    -        -           -\n",
+       "6       FO  Right    *        -           *\n",
+       "7       KN  Right    *        -           -"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patient_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sub_code</th>\n",
+       "      <th>hemi</th>\n",
+       "      <th>tSNR</th>\n",
+       "      <th>Rotation</th>\n",
+       "      <th>Translation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XC</td>\n",
+       "      <td>left</td>\n",
+       "      <td>88.37</td>\n",
+       "      <td>71.48</td>\n",
+       "      <td>62.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SI</td>\n",
+       "      <td>left</td>\n",
+       "      <td>1.93</td>\n",
+       "      <td>91.26</td>\n",
+       "      <td>96.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BI</td>\n",
+       "      <td>left</td>\n",
+       "      <td>83.13</td>\n",
+       "      <td>99.61</td>\n",
+       "      <td>76.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BN</td>\n",
+       "      <td>left</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>99.61</td>\n",
+       "      <td>88.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>EB</td>\n",
+       "      <td>right</td>\n",
+       "      <td>79.36</td>\n",
+       "      <td>62.06</td>\n",
+       "      <td>28.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>KT</td>\n",
+       "      <td>right</td>\n",
+       "      <td>27.15</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>27.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>FO</td>\n",
+       "      <td>right</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>97.18</td>\n",
+       "      <td>99.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>KN</td>\n",
+       "      <td>right</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>85.90</td>\n",
+       "      <td>94.34</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sub_code   hemi   tSNR  Rotation  Translation\n",
+       "0       XC   left  88.37     71.48        62.14\n",
+       "1       SI   left   1.93     91.26        96.06\n",
+       "2       BI   left  83.13     99.61        76.76\n",
+       "3       BN   left   0.91     99.61        88.56\n",
+       "4       EB  right  79.36     62.06        28.07\n",
+       "5       KT  right  27.15      0.51        27.78\n",
+       "6       FO  right   0.06     97.18        99.06\n",
+       "7       KN  right   0.12     85.90        94.34"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patient_percentiles"
    ]
   },
   {
