added control hemi analyses

--- a/create_plots.ipynb
+++ b/create_plots.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,31 +223,7 @@
     "    #create plot\n",
     "    create_confound_plot(resample_data_roi,data_mean_roi, data_summary_roi,  data_type, f'{roi} {data_name}')\n",
     "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "'''\n",
-    "seed = 2\n",
-    "p = ggplot(resample_data_long, aes(x = 'roi', y = data_type, fill = 'hemi'))  + \\\n",
-    "            geom_violin( alpha = .3, position =  position_dodge(.9) ) + \\\n",
-    "            geom_jitter(data_summary,aes(x = 'roi', y = data_type, fill = 'hemi'), shape = 'o', size = 3, position = position_jitterdodge(dodge_width=.9, jitter_width = 0.2, random_state = seed)) + \\\n",
-    "            geom_linerange(data_mean, aes(x = 'roi', ymin = f'{data_type} - se', ymax = f'{data_type} + se', fill = 'hemi'), size = 1,position = position_dodge(.9)) + \\\n",
-    "            geom_point(data_mean, aes(x = 'roi', y = data_type, fill = 'hemi'), shape = 's', size = 3,position = position_dodge(.9)) + \\\n",
-    "            geom_label(data_summary, aes(x = 'roi', y = data_type, label = 'sub_code'),  position = position_jitterdodge(dodge_width=.9, jitter_width = 0.2, random_state = seed),  size = 8) + \\\n",
-    "            scale_fill_manual(values = ['#808080','#ee7183', '#7398af']) + \\\n",
-    "            xlab('Group') + ylab(data_name) + \\\n",
-    "            theme_classic() + \\\n",
-    "            theme(text = element_text(color ='black'), \n",
-    "                axis_text_y= element_text(size = 12),\n",
-    "                axis_title=element_text(size = 14),\n",
-    "                axis_line=element_line(), \n",
-    "                legend_position = 'none',\n",
-    "                panel_border=element_blank(),\n",
-    "                figure_size = (9, 5))+ \\\n",
-    "                labs(fill='Hemisphere')\n",
-    "\n",
-    "print(p)'''"
+    "    \n"
    ]
   },
   {
@@ -407,6 +383,90 @@
     "\n",
     "\n",
     "    print(cond, t, curr_data.shape[0]-1, p, d)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word ventral_visual_cortex 0.6666666666666666\n",
+      "face ventral_visual_cortex 0.3333333333333333\n",
+      "tool dorsal_visual_cortex 0.2916666666666667\n",
+      "space dorsal_visual_cortex 0.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Calculate what proportion of controls are outside the range for the non-preferred hemisphere\n",
+    "'''\n",
+    "\n",
+    "summary_type = 'sum_selec_norm'\n",
+    "analysis_type = 'selectivity'\n",
+    "conds = ['word', 'face','tool','space']\n",
+    "rois = ['ventral_visual_cortex','ventral_visual_cortex','dorsal_visual_cortex','dorsal_visual_cortex']\n",
+    "pref_hemis = ['left','right','left','right']\n",
+    "nonpref_hemis = ['right','left','right','left']\n",
+    "\n",
+    "#load resample data\n",
+    "act_resamples = pd.read_csv(f'{results_dir}/{analysis_type}/resamples/{summary_type}_resamples{suf}.csv')\n",
+    "#replace columns with dorsal visual cortex with dvc\n",
+    "for col in act_resamples.columns:\n",
+    "    if 'dorsal_visual_cortex' in col:\n",
+    "        new_col = col.replace('dorsal_visual_cortex','dvc')\n",
+    "        act_resamples.rename(columns={col:new_col}, inplace=True)\n",
+    "    if 'ventral_visual_cortex' in col:\n",
+    "        new_col = col.replace('ventral_visual_cortex','vvc')\n",
+    "        act_resamples.rename(columns={col:new_col}, inplace=True)\n",
+    "        \n",
+    "#convert act resamples to long format\n",
+    "act_resamples_long = pd.melt(act_resamples, var_name='type', value_name=analysis_type)\n",
+    "act_resamples_long[['cond','hemi','roi']] = act_resamples_long['type'].str.split('_',expand=True)\n",
+    "\n",
+    "#rename roi column\n",
+    "act_resamples_long['roi'].replace('dvc','dorsal_visual_cortex',inplace=True)\n",
+    "act_resamples_long['roi'].replace('vvc','ventral_visual_cortex',inplace=True)\n",
+    "\n",
+    "for cond, roi, pref_hemi, nonpref_hemi in zip(conds, rois, pref_hemis, nonpref_hemis):\n",
+    "\n",
+    "    #load summary data\n",
+    "    data_summary = pd.read_csv(f'{results_dir}/{analysis_type}/{analysis_type}_summary{suf}.csv')\n",
+    "\n",
+    "    #extract data for cond, roi, pref hemi, and controls\n",
+    "    data_summary = data_summary[(data_summary['cond']==cond) & (data_summary['roi']==roi) & (data_summary['group']=='control') & (data_summary['hemi']==pref_hemi)]\n",
+    "\n",
+    "    #extract resample data for cond and roi\n",
+    "    curr_resamples = act_resamples_long[(act_resamples_long['cond']==cond) & (act_resamples_long['roi']==roi) & (act_resamples_long['hemi']==nonpref_hemi)]\n",
+    "\n",
+    "    #calculate CIs for resamples\n",
+    "    resample_ci = curr_resamples.groupby(['cond','roi','hemi']).quantile([.025, .975]).reset_index()\n",
+    "\n",
+    "    #convert each subjects score to a percentile relative to the resamples\n",
+    "    for sub in data_summary['sub'].unique():\n",
+    "        #extract subject's score\n",
+    "        sub_score = data_summary[data_summary['sub']==sub][summary_type].values[0]\n",
+    "        #calculate percentile\n",
+    "        percentile = stats.percentileofscore(curr_resamples['selectivity'], sub_score)\n",
+    "        #add percentile to data summary\n",
+    "        data_summary.loc[data_summary['sub']==sub, 'percentile'] = percentile\n",
+    "\n",
+    "    #count how many subjects have a percentile greater thant 97.5\n",
+    "    prop = data_summary[data_summary['percentile'] > 97.5].shape[0]/ data_summary.shape[0]\n",
+    "\n",
+    "    print(cond, roi, prop)\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
    ]
   },
   {
